assets/css/style.css
/* ... */
@media screen and (min-width: 768px) {
    /* Tablets min_width 768px */

    #hero {
        width: 100%;
    }

    /* Resizing text over hero img */
    .text-over-hero {
        width: 60%;
        margin-left: 50%;
        font-size: 30px;
        margin-top: 80px;
        height: 245px;
    }

    .text-intro {
        display: flex;
        box-sizing: border-box;
        height: auto;
    }

    /* Resizing header/nav section */

    #home-nav {
        margin-top: 5px;
        font-size: 70px;
    }

    #about-nav,
    #gigs-nav {
        font-size: 20px;
    }

    #about-nav {
        padding-left: 12.5%;
    }


    #gigs-nav {
        padding-right: 12.5%;
    }

    /* Resizing About Page */

    .text-intro-heading {
        /* Intro Section Heading*/
        margin-top: 20px;
        padding-top: 10px;
        padding-bottom: 5px;
        padding-left: 20px;
        padding-right: 20px;
        font-size: 24px;
    }

    .text-intro {               /* Intro Section */
        
        height: auto;
        margin-top: 18px;
        margin-bottom: 50px;
        padding: 6px;
        font-size: 25px;
    }

    .text-heading-contact {
        margin-top: 20px;
        padding-top: 10px;
        padding-bottom: 5px;
        padding-left: 20px;
        padding-right: 20px;
        font-size: 20px;
    }

    .text-intro-contact {
        height: auto;
        margin-left: 5%;
        margin-top: 23px;
        margin-bottom: 50px;
        padding: 6px;
        font-size: 18px;
    }

/* Resizing footer  */

    #venue {
        height: 80px;
        margin-top: 10px;
        padding-bottom: 5px;

    }

    #venue-wrapper {
        padding-top: 7px;
    }

    #social-media {
        display: flex;
        justify-content: space-evenly;
    }

    #social-media i {
        margin-top: 5px;
        margin-bottom: 5px;
        font-size: 20px;
    }
    
    .text-heading-contact {
        height: auto;
        padding-top: 50px;
    }

    .text-over-hero {
        width: 34%;
        margin-top: 60px;
        margin-left: 55%;
        font-size: 25px;
        height: 205px;
    }
    section>h1 {
        font-size: 45px;
    }

/* Resizing gigs page */

    .gig-green, .gig-orange {
        height: 140px;
        font-size: x-large;
    }

    #dr-john {
        height: 150px;
        padding-top: 5px;
    }

    #witches {
        height: 150px;
        padding-top: 5px;
    }

    #queens {
        height: 150px;
        padding-top: 5px;
    }

    #closed-feb {
        height: 150px;
        padding-top: 5px;
    }
}

@media screen and (min-width: 992px) {
    /* laptops etc min_width 992px */

    #hero {
        background-size: cover;
        background-position: right;
        position: relative;
    }

    #home-nav {
        display: flex;
        justify-content: flex-start;
        float: left;
        margin-left: 13px;
        font-size: 90px;
    }

    #gigs-nav {
        display: flex;
        justify-content: flex-end;
        display: block;
        margin-top: 50px;
        font-size: 30px;
        padding-right: 20px;
        position: relative;
        left: 195px;
    }

    #about-nav {
        display: flex;
        justify-content: flex-end;
        display: block;
        margin-top: 50px;
        font-size: 30px;
        padding-right: 20px;
        position: relative;
        left: 95px;
    }

    .text-over-hero {
        position: relative;
        right: 600px;
        position: relative;
        top: 60px;
        width: 400px;
    }

    #hero {
        height: 80vh;
    }

    .text-intro {
        display: flex;
        justify-content: center;
        height: 100%;
        width: 1200px;
        margin-left: auto;
        margin-right: auto;
        font-size: 30px;
    }

    .text-intro-contact {
        width: 700px;
        min-height: 210px;
        display: flex;
        flex-direction: column;
        padding-bottom: 5px;
        text-align: center;
        font-size: 20px;
        margin-left: auto;
        margin-right: auto;
    }

    #email-button {
        width: 100%;
        width: fit-content;
        display: flex;
        align-self: center;
    }
}

@media screen and (min-width: 1080px) and (max-width: 1280px) {     /* Tablets landcape */
    
    /* Navigation adjustments */
    
    #home-nav {
        font-size: 70px;
        justify-content: left;
        margin-top: 45px;
    }

    #about-nav {
        margin-right: 90px;
        margin-top: 60px;
        width: 70px;
    }

    #gigs-nav {
        margin-right: 70px;
        width: 70px;
        margin-top: 60px;
    }

    /* text intro section */

    .text-intro {
        font-size: 25px;
        width: 90%;
        height: 320px;
    }


    /* .gig-green, .gig-orange */

    .gig-green, .gig-orange {
        height: 120px;
    }

    #dr-john {
        height: 110px;
        padding-top: 5px;
    }

    #witches {
        height: 135px;
        padding-top: 5px;
    }

    #queens {
        height: 135px;
        padding-top: 5px;
    }

    #closed-feb {
        height: 110px;
        padding-top: 5px;
    }
}

@media screen and (min-width: 1280px) {

    .text-intro {
        font-size: 27px;
        width: 90%;
        height: 320px;
    }



}
/* ... */

